--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:ems="9"
-        android:hint="Cost (in euros)"
+        android:hint="@string/editCost"
         android:inputType="numberDecimal"
         />
 
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/etCost"
         android:ems="10"
-        android:hint="Description"
+        android:hint="@string/editDescription"
         android:inputType="text"
         android:lines="3"
         android:paddingTop="16dp"
