--- a/app/src/main/res/menu/actions_toolbar.xml
+++ b/app/src/main/res/menu/actions_toolbar.xml
@@ -2,17 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- "Mark Favorite", should appear as action button if possible -->
 
-    <!-- Settings, should always be in the overflow -->
     <item
         android:id="@+id/history"
         android:title="@string/history"
         app:showAsAction="never" />
     <item
+        android:id="@+id/resetall"
+        android:title="@string/resetall"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/about"
         android:title="@string/about"
         app:showAsAction="never" />
-
 
 </menu>
