--- a/app/src/main/res/layout/activity_history_list.xml
+++ b/app/src/main/res/layout/activity_history_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.fromzerotoandroid.moneyflows.ResetAll">
+    tools:context="com.fromzerotoandroid.moneyflows.HistoryList">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_reset_all" />
+    <include layout="@layout/content_history_list" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
