--- a/app/src/main/res/layout/content_history_list.xml
+++ b/app/src/main/res/layout/content_history_list.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listview_history"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_rowSpan="4"
+    android:layout_rowWeight="">
 
 
     </ListView>
-</ScrollView>
