--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="customlistitem_Date">#3ce810</color>
-    <color name="customlistitem_Cost">#FF4081</color>
+    <color name="customlistitem_Cost">#FFFFFFFF</color>
 
 </resources>
