--- a/app/src/main/res/layout/customlistitem.xml
+++ b/app/src/main/res/layout/customlistitem.xml
@@ -1,33 +1,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/customlistiem_Date"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:background="@color/customlistitem_Date"
-        android:text="Date" />
+        android:id="@+id/customlistiem_Category"
+        android:layout_width="50sp"
+        android:layout_height="36sp"
+        android:layout_weight="1"
+        android:textSize="12sp"
+        android:text="Category" />
 
     <TextView
         android:id="@+id/customlistiem_Cost"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
+        android:layout_width="100sp"
+        android:layout_height="36sp"
+        android:layout_weight="2"
+        android:textSize="12sp"
         android:background="@color/customlistitem_Cost"
         android:text="Cost" />
 
     <TextView
-        android:id="@+id/customlistiem_Category"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:text="Category" />
+        android:id="@+id/customlistiem_Description"
+        android:layout_width="250sp"
+        android:layout_height="36sp"
+        android:layout_weight="3"
+        android:textSize="12sp"
+        android:text="Description" />
 
 
-</LinearLayout> 
+    <TextView
+        android:id="@+id/customlistiem_Date"
+        android:layout_width="110sp"
+        android:layout_height="36sp"
+        android:layout_weight="1"
+        android:textSize="12sp"
+        android:background="@color/customlistitem_Date"
+        android:text="Date" />
+
+
+</LinearLayout>
