--- a/app/src/main/res/layout/content_history_list.xml
+++ b/app/src/main/res/layout/content_history_list.xml
@@ -5,18 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".HistoryList"
     tools:showIn="@layout/activity_history_list">
 
     <android.support.v7.widget.Toolbar
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/history_toolbarlist" />
+        android:titleTextColor="@android:color/white"
+        android:elevation="4dp"
+        android:background="#0000FF"
+        android:id="@+id/history_toolbarlist"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <!--<TextView-->
     <!--android:id="@+id/textView1"-->
