--- a/app/src/main/res/menu/actions_toolbar.xml
+++ b/app/src/main/res/menu/actions_toolbar.xml
@@ -4,6 +4,10 @@
 
 
     <item
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/history"
         android:title="@string/history"
         app:showAsAction="never" />
