removed textview for the color and adjusted layout main

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,30 +39,28 @@
         />
 
 
-    <TextView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/tvCategoryColor"
-        android:layout_below="@id/etDescription"
-        android:background="@color/colorAccent"
-        />
+    <!--<TextView-->
+    <!--android:layout_width="50dp"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:id="@+id/tvCategoryColor"-->
+    <!--android:layout_below="@id/etDescription"-->
+    <!--android:background="@color/colorAccent"-->
+    <!--/>-->
 
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
-        android:layout_toRightOf="@id/tvCategoryColor"
-        android:layout_marginLeft="16dp"
         android:layout_below="@id/etDescription"
-        android:paddingTop="16dp"
+        android:paddingTop="8dp"
         android:textAlignment="center" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_add"
-        android:layout_below="@id/tvCategoryColor"
+        android:layout_below="@id/spinner"
         android:id="@+id/button"
         android:paddingTop="16dp"
         android:onClick="addCost"
