messed up with colors, need a solution for the graphics

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -64,13 +64,8 @@
         android:layout_alignBottom="@id/imgIconCategory"
         android:layout_toRightOf="@id/imgIconCategory"
         android:paddingTop="8dp"
-        android:textAlignment="center" />
-
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/etDescription"
-        android:layout_toRightOf="@id/spinner" />
+        android:textAlignment="center"
+        android:cacheColorHint="#00000000" />
 
     <Button
         android:layout_width="wrap_content"
