--- a/app/src/main/res/layout/content_history_list.xml
+++ b/app/src/main/res/layout/content_history_list.xml
@@ -10,14 +10,15 @@
     tools:showIn="@layout/activity_history_list">
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/history_toolbarlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:titleTextColor="@android:color/white"
-        android:elevation="4dp"
         android:background="#0000FF"
-        android:id="@+id/history_toolbarlist"
+        android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:titleTextColor="@android:color/white"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
 
     <!--<TextView-->
     <!--android:id="@+id/textView1"-->
@@ -29,12 +30,56 @@
     <!--android:textColor="@color/customlistitem_Date"-->
     <!--android:text="History" />-->
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <TextView
+            android:id="@+id/header_Category"
+            android:layout_width="100sp"
+            android:layout_height="36sp"
+            android:textStyle="bold"
+            android:text="Category"
+            android:textSize="16sp"
+            android:background="#C0C0C0" />
+
+        <TextView
+            android:id="@+id/header_Cost"
+            android:layout_width="60sp"
+            android:layout_height="36sp"
+            android:textStyle="bold"
+            android:background="#C0C0C0"
+            android:text="Cost"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/header_Description"
+            android:layout_width="130sp"
+            android:layout_height="36sp"
+            android:textStyle="bold"
+            android:text="Description"
+            android:textSize="16sp"
+            android:background="#C0C0C0" />
+
+
+        <TextView
+            android:id="@+id/header_Date"
+            android:layout_width="80sp"
+            android:textStyle="bold"
+            android:layout_height="36sp"
+            android:background="#C0C0C0"
+
+            android:text="Date"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:dividerHeight="8dp">
-
-    </ListView>
+        android:dividerHeight="2dp" />
 
 </LinearLayout>
