--- a/app/src/main/res/layout/customlistitem.xml
+++ b/app/src/main/res/layout/customlistitem.xml
@@ -26,8 +26,9 @@
         android:layout_height="36sp"
 
         android:textSize="12sp"
-        android:text="Description" />
-    android:gravity="center_vertical"
+        android:text="Description"
+        android:gravity="center_vertical" />
+
 
     <TextView
         android:id="@+id/customlistiem_Date"
