--- a/app/src/main/res/layout/content_history_list.xml
+++ b/app/src/main/res/layout/content_history_list.xml
@@ -6,30 +6,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".HistoryList"
+    tools:context="com.fromzerotoandroid.moneyflows.HistoryList"
     tools:showIn="@layout/activity_history_list">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/history_toolbarlist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#0000FF"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:titleTextColor="@android:color/white"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    <!-- Toolbar -->
+    <!--   <android.support.v7.widget.Toolbar
+           android:id="@+id/history_toolbarlist"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:background="#0000FF"
+           android:elevation="4dp"
+           android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+           android:titleTextColor="@android:color/white"
+           app:popupTheme="@style/ThemeOverlay.AppCompat.Light" /> -->
 
 
-    <!--<TextView-->
-    <!--android:id="@+id/textView1"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textSize="25dp"-->
-    <!--android:layout_below="@id/history_toolbar"-->
-    <!--android:textStyle="bold"-->
-    <!--android:textColor="@color/customlistitem_Date"-->
-    <!--android:text="History" />-->
-
+    <!-- Header -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,6 +68,7 @@
 
     </LinearLayout>
 
+    <!-- List -->
     <ListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
