--- a/app/src/main/res/layout/mainactivity_activity.xml
+++ b/app/src/main/res/layout/mainactivity_activity.xml
@@ -25,7 +25,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/mainactivity_content" />
 
  <!--   <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
