added settings layout, still need to finish it

--- a/app/src/main/res/layout/historylist_rowitem.xml
+++ b/app/src/main/res/layout/historylist_rowitem.xml
@@ -35,7 +35,7 @@
 
         android:layout_height="36sp"
         android:textSize="12sp"
-        android:gravity="center"
+        android:gravity="left"
         android:textStyle="italic"
         android:text="Date" />
 
