--- a/app/src/main/res/layout/mainactivity_content.xml
+++ b/app/src/main/res/layout/mainactivity_content.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/etCost"
         android:ems="10"
+        android:maxLength="30"
         android:hint="@string/editDescription"
         android:inputType="text"
         android:lines="3"
