--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="Transportation">#ff9900</color>
     <color name="Health">#ffaaaaff</color>
     <color name="Pets">#ff999999</color>
+    <color name="Bills">#aaffff</color>
 
 
 </resources>
