--- a/app/src/main/res/layout/content_details_trx.xml
+++ b/app/src/main/res/layout/content_details_trx.xml
@@ -60,6 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/details_trx_description"
         android:layout_centerHorizontal="true"
+        android:onClick="onUpdateTrxClick"
         android:paddingTop="30sp" />
 
 
