--- a/app/src/main/res/layout/content_details_trx.xml
+++ b/app/src/main/res/layout/content_details_trx.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.fromzerotoandroid.moneyflows.DetailsTrx"
+    tools:context=".UpdateTransaction"
     tools:showIn="@layout/activity_details_trx">
 
     <LinearLayout
