--- a/app/src/main/res/layout/historylist_content.xml
+++ b/app/src/main/res/layout/historylist_content.xml
@@ -22,54 +22,61 @@
 
 
     <!-- Header -->
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/header_Category"
             android:layout_width="100sp"
             android:layout_height="36sp"
-            android:textStyle="bold"
-            android:text="Category"
+            android:background="#C0C0C0"
             android:gravity="center_vertical"
+            android:text="Category"
             android:textSize="16sp"
-            android:background="#C0C0C0" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/header_Cost"
             android:layout_width="60sp"
             android:layout_height="36sp"
-            android:textStyle="bold"
             android:background="#C0C0C0"
             android:gravity="center_vertical"
             android:text="Cost"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/header_Description"
             android:layout_width="130sp"
             android:layout_height="36sp"
-            android:textStyle="bold"
-            android:text="Description"
+            android:background="#C0C0C0"
             android:gravity="center_vertical"
+            android:text="Description"
             android:textSize="16sp"
-            android:background="#C0C0C0" />
+            android:textStyle="bold" />
 
 
         <TextView
             android:id="@+id/header_Date"
             android:layout_width="80sp"
-            android:textStyle="bold"
             android:layout_height="36sp"
-            android:gravity="center_vertical"
             android:background="#C0C0C0"
+            android:gravity="center_vertical"
             android:text="Date"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/searchforiteminhistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search for description..."
+        android:visibility="gone" />
 
     <!-- List -->
     <ListView
