--- a/app/src/main/res/layout/mainactivity_spinner.xml
+++ b/app/src/main/res/layout/mainactivity_spinner.xml
@@ -3,11 +3,11 @@
     android:id="@android:id/text1"
     android:layout_width="150sp"
     android:layout_height="40sp"
-    android:textSize="16sp"
+    android:gravity="center"
     android:shadowColor="#000000"
     android:shadowDx="2"
     android:shadowDy="2"
     android:shadowRadius="2"
-    android:gravity="center" />
+    android:textSize="16sp" />
 
 
