--- a/app/src/main/res/menu/history_toolbar.xml
+++ b/app/src/main/res/menu/history_toolbar.xml
@@ -5,14 +5,14 @@
 
     <item
         android:id="@+id/filter"
+        android:icon="@drawable/filtericon"
         android:title="@string/filterOnList"
-        app:showAsAction="always"
-        android:icon="@drawable/filtericon" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/search"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="@string/searchInList"
-        app:showAsAction="always"
-        android:icon="@android:drawable/ic_menu_search" />
+        app:showAsAction="always" />
 
 
 </menu>
