--- a/app/src/main/res/layout/content_details_trx.xml
+++ b/app/src/main/res/layout/content_details_trx.xml
@@ -15,25 +15,30 @@
     <LinearLayout
         android:id="@+id/header_details_trx"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/details_trx_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
             android:layout_weight="1"
-            android:hint="Category"
-            android:textSize="20sp"
+            android:hint="category"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/details_trx_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
             android:layout_toRightOf="@id/details_trx_category"
             android:layout_weight="2"
-            android:hint="Date"
-            android:textSize="20sp"
+            android:hint="date"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -60,8 +65,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/details_trx_description"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="30sp"
         android:onClick="onUpdateTrxClick"
-        android:paddingTop="30sp" />
+        android:text="Update" />
 
 
 </RelativeLayout>
