--- a/app/src/main/res/layout/content_details_trx.xml
+++ b/app/src/main/res/layout/content_details_trx.xml
@@ -22,8 +22,8 @@
             android:id="@+id/details_trx_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16sp"
-            android:layout_marginRight="16sp"
+            android:layout_marginLeft="8sp"
+            android:layout_marginRight="8sp"
             android:layout_weight="1"
             android:hint="category"
             android:textSize="16sp"
@@ -33,8 +33,8 @@
             android:id="@+id/details_trx_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16sp"
-            android:layout_marginRight="16sp"
+            android:layout_marginLeft="8sp"
+            android:layout_marginRight="8sp"
             android:layout_toRightOf="@id/details_trx_category"
             android:layout_weight="2"
             android:hint="date"
@@ -50,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/header_details_trx"
         android:hint="Cost"
+        android:inputType="numberDecimal"
         android:paddingTop="30sp" />
 
     <EditText
