--- a/app/src/main/res/layout/historylist_rowitem.xml
+++ b/app/src/main/res/layout/historylist_rowitem.xml
@@ -4,6 +4,13 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/customlistitem_Id"
+        android:layout_width="1sp"
+        android:layout_height="1sp"
+        android:text="Id"
+        android:visibility="gone" />
+
+    <TextView
         android:id="@+id/customlistitem_Category"
         android:layout_width="100sp"
         android:layout_height="36sp"
