--- a/app/src/main/res/layout/mainactivity_content.xml
+++ b/app/src/main/res/layout/mainactivity_content.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_rel_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -26,14 +27,14 @@
         />
 
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/etDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/etCost"
         android:ems="10"
         android:hint="@string/editDescription"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:lines="3"
         android:maxLength="30"
         android:paddingTop="16dp"
