--- a/app/src/main/res/layout/mainactivity_content.xml
+++ b/app/src/main/res/layout/mainactivity_content.xml
@@ -16,29 +16,28 @@
 
     <EditText
         android:id="@+id/etCost"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:ems="9"
         android:hint="@string/editCost"
-        android:inputType="numberDecimal"
-        />
+        android:inputType="numberDecimal" />
 
 
     <AutoCompleteTextView
         android:id="@+id/etDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_below="@id/etCost"
         android:ems="10"
         android:hint="@string/editDescription"
         android:inputType="textCapSentences"
         android:lines="3"
         android:maxLength="30"
-        android:paddingTop="16dp"
-        />
+        android:paddingTop="16dp" />
 
 
     <!--<TextView-->
@@ -62,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/imgIconCategory"
+        android:layout_alignRight="@+id/etDescription"
         android:layout_below="@id/etDescription"
         android:layout_marginTop="16dp"
         android:layout_toRightOf="@id/imgIconCategory"
@@ -71,26 +71,36 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/spinner"
+        android:layout_below="@+id/spinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:onClick="addCost"
         android:paddingTop="16dp"
-        android:text="@string/button_add"
-        />
+        android:text="@string/button_add" />
 
+    <TextView
+        android:id="@+id/graphLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button"
+        android:layout_marginTop="16dp"
+        android:text="graphLabel"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        />
 
     <LinearLayout
         android:id="@+id/chart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button"
+        android:layout_below="@id/graphLabel"
         android:orientation="horizontal"
         android:paddingTop="20dp"
         />
-
 
 
 </RelativeLayout>
