--- a/app/src/main/res/layout/mainactivity_spinner.xml
+++ b/app/src/main/res/layout/mainactivity_spinner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    android:layout_width="150sp"
+    android:layout_width="match_parent"
     android:layout_height="40sp"
     android:gravity="center"
     android:shadowColor="#000000"
