--- a/app/src/main/res/layout/content_details_trx.xml
+++ b/app/src/main/res/layout/content_details_trx.xml
@@ -70,5 +70,11 @@
         android:onClick="onUpdateTrxClick"
         android:text="Update" />
 
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button_update_trx" />
+
 
 </RelativeLayout>
