--- a/app/src/main/res/layout/mainactivity_content.xml
+++ b/app/src/main/res/layout/mainactivity_content.xml
@@ -40,12 +40,12 @@
         android:paddingTop="16dp" />
 
 
-    <!--<TextView-->
-    <!--android:layout_width="50dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:id="@+id/tvIconCategory"-->
-    <!--android:layout_below="@id/etDescription"-->
-    <!--/>-->
+    <LinearLayout
+        android:id="@+id/line1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etDescription"
+        android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imgIconCategory"
@@ -53,7 +53,8 @@
         android:layout_height="50dp"
         android:layout_below="@id/etDescription"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:layout_weight="1" />
 
 
     <Spinner
@@ -65,15 +66,25 @@
         android:layout_below="@id/etDescription"
         android:layout_marginTop="16dp"
         android:layout_toRightOf="@id/imgIconCategory"
+        android:layout_weight="50"
         android:cacheColorHint="#00000000"
         android:paddingTop="8dp"
         android:textAlignment="center" />
 
     <Button
+        android:id="@+id/btnDateDialog"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:background="@drawable/calendar" />
+    </LinearLayout>
+
+    <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/line1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:onClick="addCost"
