--- a/app/src/main/res/layout/historylist_content.xml
+++ b/app/src/main/res/layout/historylist_content.xml
@@ -36,9 +36,11 @@
 
         <TextView
             android:id="@+id/header_Category"
-            android:layout_width="100sp"
+            android:layout_width="0dp"
             android:layout_height="36sp"
+            android:layout_weight="2"
             android:background="#C0C0C0"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="Category"
             android:textSize="16sp"
@@ -46,9 +48,11 @@
 
         <TextView
             android:id="@+id/header_Cost"
-            android:layout_width="60sp"
+            android:layout_width="0dp"
             android:layout_height="36sp"
+            android:layout_weight="1"
             android:background="#C0C0C0"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="Cost"
             android:textSize="16sp"
@@ -56,9 +60,11 @@
 
         <TextView
             android:id="@+id/header_Description"
-            android:layout_width="130sp"
+            android:layout_width="0dp"
             android:layout_height="36sp"
+            android:layout_weight="3"
             android:background="#C0C0C0"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="Description"
             android:textSize="16sp"
@@ -67,9 +73,11 @@
 
         <TextView
             android:id="@+id/header_Date"
-            android:layout_width="80sp"
+            android:layout_width="0dp"
             android:layout_height="36sp"
+            android:layout_weight="1"
             android:background="#C0C0C0"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="Date"
             android:textSize="16sp"
