--- a/app/src/main/res/layout/historylist_rowitem.xml
+++ b/app/src/main/res/layout/historylist_rowitem.xml
@@ -5,25 +5,27 @@
 
     <TextView
         android:id="@+id/customlistitem_Id"
-        android:layout_width="1sp"
-        android:layout_height="1sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Id"
         android:visibility="gone" />
 
     <TextView
         android:id="@+id/customlistitem_Category"
-        android:layout_width="100sp"
+        android:layout_width="0dp"
         android:layout_height="36sp"
+        android:layout_weight="2"
         android:background="#ffffffff"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="Category"
         android:textSize="12sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/customlistitem_Cost"
-        android:layout_width="60sp"
+        android:layout_width="0dp"
         android:layout_height="36sp"
+        android:layout_weight="1"
         android:background="@color/notSelectedListViewItem"
         android:gravity="center"
         android:text="Cost"
@@ -31,8 +33,9 @@
 
     <TextView
         android:id="@+id/customlistitem_Description"
-        android:layout_width="130sp"
+        android:layout_width="0dp"
         android:layout_height="36sp"
+        android:layout_weight="3"
         android:background="#ffffffff"
         android:gravity="center_vertical"
         android:text="Description"
@@ -41,10 +44,11 @@
 
     <TextView
         android:id="@+id/customlistitem_Date"
-        android:layout_width="80sp"
+        android:layout_width="0dp"
         android:layout_height="36sp"
+        android:layout_weight="1"
         android:background="#ffffffff"
-        android:gravity="left"
+        android:gravity="center_vertical"
         android:text="Date"
         android:textSize="12sp"
         android:textStyle="italic" />
