--- a/app/src/main/res/layout/historylist_content.xml
+++ b/app/src/main/res/layout/historylist_content.xml
@@ -42,6 +42,7 @@
             android:background="#C0C0C0"
             android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="orderByCategory"
             android:text="Category"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -54,6 +55,7 @@
             android:background="#C0C0C0"
             android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="orderByCost"
             android:text="Cost"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -66,6 +68,7 @@
             android:background="#C0C0C0"
             android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="orderByDescription"
             android:text="Description"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -79,6 +82,7 @@
             android:background="#C0C0C0"
             android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="orderByDate"
             android:text="Date"
             android:textSize="16sp"
             android:textStyle="bold" />
